--- a/oecd.html
+++ b/oecd.html
@@ -95,7 +95,7 @@
 
   // --- KONSTANTER & LISTER ---
   // VIGTIGT: Udskift med din egen Netlify URL!
-  const proxyUrl  = 'https://DIN-NETLIFY-SIDE.netlify.app/.netlify/functions/oecd-proxy?url='; 
+  const proxyUrl  = 'https://snazzy-begonia-e1b624.netlify.app/.netlify/functions/oecd-proxy?url='; 
   const apiBase   = 'https://sdmx.oecd.org/public/rest/data/';
   const flow      = 'OECD.ECO.MAD,DSD_EO@DF_EO,1.2/';
   const startYear = 2015, endYear = 2024;
