--- a/index.html
+++ b/index.html
@@ -58,18 +58,16 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
           </a>
         </article>
-        <!-- Ny knap til World Bank data -->
+        <article role="region" aria-labelledby="card-title-video" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="MinOptager/videooptager.html" class="block p-6">
+            <h3 id="card-title-video" class="text-xl font-semibold text-[#7C3AED]">Videooptager</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Optag og gem videoer</p>
+          </a>
+        </article>
         <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="worldbank.html" class="block p-6">
             <h3 id="card-title-worldbank" class="text-xl font-semibold text-[#7C3AED]">Hent data fra World Bank</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
-          </a>
-        </article>
-        <!-- Ny knap til Gruppedannelse -->
-        <article role="region" aria-labelledby="card-title-gruppedannelse" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="grupper.html" class="block p-6">
-            <h3 id="card-title-gruppedannelse" class="text-xl font-semibold text-[#7C3AED]">Gruppedannelse</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Gruppedannelse</p>
           </a>
         </article>
       </div>
