--- a/MinOptager/videooptager.html
+++ b/MinOptager/videooptager.html
@@ -29,7 +29,7 @@
         <button id="stopButton" class="action-btn hidden">Stop Optagelse</button>
 
         <div class="video-preview-container">
-             <canvas id="videoCanvas" class="hidden" style="width:100%; height:100%;"></canvas>
+            <canvas id="videoCanvas" class="hidden" style="width:100%; height:100%;"></canvas>
             <video id="webcamPreview" class="webcam-preview hidden" autoplay muted></video>
             <video id="finalVideo" controls class="final-video hidden"></video>
         </div>
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.11.0/dist/ffmpeg.min.js"></script>
+    <script src="ffmpeg.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
