--- a/MinOptager/videooptager.html
+++ b/MinOptager/videooptager.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.5/dist/umd/ffmpeg.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.0/dist/ffmpeg.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
