--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </a>
         </article>
         <article role="region" aria-labelledby="card-title-video" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="MinOptager/videooptager.html" class="block p-6">
+          <a href="https://record.addy.ie/" class="block p-6">
             <h3 id="card-title-video" class="text-xl font-semibold text-[#7C3AED]">Videooptager</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Optag og gem videoer</p>
           </a>
