--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af World Bank-data ved et klik</p>
           </a>
         </article>
+        <article role="region" aria-labelledby="card-title-grupper" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="grupper.html" class="block p-6">
+            <h3 id="card-title-grupper" class="text-xl font-semibold text-[#7C3AED]">Gruppedannelse</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Opret og administrer grupper</p>
+          </a>
+        </article>
+        <article role="region" aria-labelledby="card-title-videoforklaringer" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="video.html" class="block p-6">
+            <h3 id="card-title-videoforklaringer" class="text-xl font-semibold text-[#7C3AED]">Videoforklaringer</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Se videovejledninger og forklaringer</p>
+          </a>
+        </article>
       </div>
     </section>
   </main>
