--- a/simple-ue-kurver.html
+++ b/simple-ue-kurver.html
@@ -24,6 +24,7 @@
   <h2>Interaktivt udbuds- og efterspørgselsdiagram</h2>
 
   <div id="chartWrapper"><svg id="chart" width="600" height="400"></svg></div>
+  <button id="pngBtn" style="margin-top:0.8rem">Download PNG</button>
 
   <div class="legend">
     <span><span class="legend-line baseline-demand"></span>Oprindelig efterspørgsel</span>
@@ -198,6 +199,29 @@ function applyText(){
   dField.value='';sField.value='';
   updateDynamic();
 }
+
+/***** PNG-eksport *****/
+const savePNG = () => {
+  const serializer = new XMLSerializer(),
+        svgString  = serializer.serializeToString(svg);
+  const img  = new Image();
+  img.onload = () => {
+    const canvas = document.createElement('canvas');
+    canvas.width  = width;
+    canvas.height = height;
+    const ctx = canvas.getContext('2d');
+    ctx.fillStyle = '#fff';
+    ctx.fillRect(0,0,width,height);
+    ctx.drawImage(img, 0, 0);
+    const a = document.createElement('a');
+    a.download = 'udbud-efterspoergsel.png';
+    a.href = canvas.toDataURL('image/png');
+    a.click();
+  };
+  img.src = 'data:image/svg+xml;base64,' + window.btoa(unescape(encodeURIComponent(svgString)));
+};
+
+document.getElementById('pngBtn').addEventListener('click', savePNG);
 </script>
 </body>
 </html>
