--- a/oecd.html
+++ b/oecd.html
@@ -865,7 +865,7 @@ Analyser med udgangspunkt i relevante nøgletal mulige årsagsforklaringer på d
   document.addEventListener('DOMContentLoaded', () => {
     populateCountries();
     // Citation opdateres til at afspejle den lokale datakilde
-    $('apiCitation').textContent = `Data kilde: OECD Data (hentet fra .csv fil) . Nyeste år: Varierer med data.`;
+    $('apiCitation').textContent = `Data kilde: OECD Economic Outlook, Volume 2025 Issue 1. Nyeste år: Varierer med data.`;
 
     $('btnFetch').onclick = async () => {
       const c1 = $('country1').value;
@@ -1120,3 +1120,4 @@ Bedømmelsen foretages på baggrund af en helhedsvurdering. Der er fokus på din
 
 </body>
 </html>
+
