--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Indsamling af OECD Data ved et klik</p>
           </a>
         </article>
+        <article role="region" aria-labelledby="card-title-forsyning" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+        <a href="forsyningsbalance.html" class="block p-6">
+          <h3 id="card-title-forsyning" class="text-xl font-semibold text-[#7C3AED]">Hent data - Forsyningsbalance</h3>
+          <p class="mt-2 text-gray-700 dark:text-gray-300">Se og hent data om forsyningsbalancen</p>
+        </a>
+      </article>
+        
         <article role="region" aria-labelledby="card-title-graphs" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
           <a href="grafer.html" class="block p-6">
             <h3 id="card-title-graphs" class="text-xl font-semibold text-[#7C3AED]">Lav grafer og kurver</h3>
@@ -101,3 +108,4 @@
 
 </body>
 </html>
+
