--- a/worldbank.html
+++ b/worldbank.html
@@ -145,7 +145,7 @@
       { code: 'SP.DYN.IMRT.IN',     name: 'Spædbørnsdødelighed (pr. 1.000)' },
       { code: 'SH.DYN.MORT',        name: 'Dødelighed under 5 år (pr. 1.000)' },
       { code: 'SP.DYN.TFRT.IN',     name: 'Fertilitetsraten (fødsler/kvinde)' },
-      { code: 'SL.AGR.EMPL.ZS',     name: 'Antal beskæftige i primære erhverv' },
+      { code: 'SL.AGR.EMPL.ZS',     name: 'Antal beskæftigede i primære erhverv' },
       { code: 'NV.AGR.TOTL.ZS',     name: 'Primære erhvervs værditilvækst (% af BNP)' },
       { code: 'SL.IND.EMPL.ZS',     name: 'Antal beskæftigede i det sekundære erhverv' },
       { code: 'NV.IND.TOTL.ZS',     name: 'Sekundær erhvervs værditilvækst (% af BNP)' },
@@ -573,3 +573,4 @@
   </script>
 </body>
 </html>
+
