--- a/forsyningsbalance.html
+++ b/forsyningsbalance.html
@@ -148,7 +148,7 @@
     },
     'AUS': {
       years: [2021, 2022, 2023, 2024, 2025, 2026], currency: 'AUD mia.', priceYear: '2022/2023 priser',
-      dataMap: { 'BNP i markedspriser': { 2021: 2202.7, 2022: 4.1, 2023: 2.0, 2024: 1.1, 2025: 1.8, 2026: 2.2 }, 'Privat forbrug': { 2021: 1089.8, 2022: 7.3, 2023: 2.4, 2024: 0.6, 2025: 1.5, 2026: 2.3 }, 'Offentligt forbrug': { 2021: 488.2, 2022: 5.1, 2023: 1.9, 2024: 4.7, 2025: 2.8, 2026: 2.1 }, 'Investeringer': { 2021: 509.6, 2022: 2.1, 2023: 5.1, 2024: 2.2, 2025: 1.8, 2026: 2.4 }, 'Lagerændringer': { 2021: 6.2, 2022: 0.6, 2023: -0.9, 2024: 0.1, 2025: 0.1, 2026: 0.0 }, 'Eksport': { 2021: 519.8, 2022: 2.6, 2023: 6.9, 2024: 1.0, 2025: 2.4, 2026: 3.1 }, 'Import': { 2021: 410.9, 2022: 13.7, 2023: 6.8, 2024: 5.5, 2025: 2.1, 2026: 3.3 }, 'Samlet inflation': { 2022: 6.7, 2023: 5.6, 2024: 3.2, 2025: 2.3, 2026: 2.3 }, 'Kerneinflation': { 2022: 5.9, 2023: 5.8, 2024: 3.3, 2025: 2.5, 2026: 2.3 }, 'Arbejdsløshedsprocenten': { 2022: 3.7, 2023: 3.7, 2024: 4.0, 2025: 4.1, 2026: 4.3 }, 'Opsparingskvoten': { 2022: 8.0, 2023: 2.6, 2024: 3.4, 2025: 4.7, 2026: 5.8 }, 'Offentligt saldo': { 2022: -1.7, 2023: -0.8, 2024: -2.7, 2025: -4.0, 2026: -3.9 }, 'Offentlig gæld': { 2022: 55.0, 2023: 55.7, 2024: 57.1, 2025: 59.9, 2026: 62.5 }, 'Betalingsbalancen i % af BNP': { 2022: 0.3, 2023: -0.3, 2024: -1.9, 2025: -2.0, 2026: -2.2 } }
+      dataMap: { 'BNP i markedspriser': { 2021: 2202.7, 2022: 4.1, 2023: 2.0, 2024: 1.1, 2025: 1.8, 2026: 2.2 }, 'Privat forbrug': { 2021: 1089.8, 2022: 7.3, 2023: 2.4, 2024: 0.6, 2025: 1.5, 2026: 2.3 }, 'Offentligt forbrug': { 2021: 488.2, 2022: 5.1, 2023: 1.9, 2024: 4.7, 2025: 2.8, 2026: 2.1 }, 'Investeringer': { 2021: 509.6, 2022: 2.1, 2023: 5.1, 2024: 2.2, 2025: 1.8, 2026: 2.4 }, 'Lagerændringer': { 2021: 6.2, 2022: 0.6, 2023: -0.9, 2024: 0.1, 2025: 0.1, 2026: 0.0 }, 'Eksport': { 2021: 519.8, 2022: 2.6, 2023: 6.9, 2024: 1.0, 2025: 2.4, 2026: 3.1 }, 'Import': { 2021: 410.9, 2022: 13.7, 2023: 6.8, 2024: 5.5, 2025: 2.1, 2026: 3.3 }, 'Samlet inflation': { 2022: 6.7, 2023: 5.6, 2024: 3.2, 2025: 2.3, 2026: 2.3 }, 'Kerneinflation': { 2022: 5.9, 2023: 5.8, 2024: 3.3, 2025: 2.5, 2026: 2.3 }, 'Arbejdsløshedsprocenten': { 2022: 3.7, 2023: 3.7, 2024: 4.0, 2025: 4.1, 2026: 4.3 }, 'Opsparingskvoten': { 2022: 8.0, 2023: 2.6, 2024: 3.4, 2025: 4.7, 2026: 5.8 }, 'Offentlig saldo': { 2022: -1.7, 2023: -0.8, 2024: -2.7, 2025: -4.0, 2026: -3.9 }, 'Offentlig gæld': { 2022: 55.0, 2023: 55.7, 2024: 57.1, 2025: 59.9, 2026: 62.5 }, 'Betalingsbalancen i % af BNP': { 2022: 0.3, 2023: -0.3, 2024: -1.9, 2025: -2.0, 2026: -2.2 } }
     },
     'AUT': {
         years: [2021, 2022, 2023, 2024, 2025, 2026], currency: 'EUR mia.', priceYear: '2015 priser',
@@ -480,5 +480,6 @@
 
 </body>
 </html>
+
 
 
