Opdateret data hentet fra

--- a/worldbank.html
+++ b/worldbank.html
@@ -166,7 +166,7 @@
   </div>
     <footer style="display:flex; justify-content:space-between; font-size:0.8em; margin:2rem 0 0 0;">
     <div class="left-footer" style="text-align:left;">
-      The World Bank. (2025). World Development Indicators. Hentet d. 11 november 2025 fra https://api.worldbank.org/v2/country/{land}/indicator/{indikator}?format=json
+      The World Bank. (2025). World Development Indicators (WB_WDI). Data hentet via Data360 API (data360.worldbank.org) den 9. november 2025.
     </div>
     <div class="right-footer" style="text-align:right;">
       &copy; Allan Baisgaard, Aalborg Handelsgymnasie, Turøgade
@@ -1084,4 +1084,5 @@
   </script>
 </body>
 </html>
+
 
