Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Lav simple kurver</p>
           </a>
         </article>
-        <article role="region" aria-labelledby="card-title-video" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="https://record.addy.ie/" class="block p-6">
-            <h3 id="card-title-video" class="text-xl font-semibold text-[#7C3AED]">Videooptager</h3>
-            <p class="mt-2 text-gray-700 dark:text-gray-300">Optag og gem videoer</p>
+        <article role="region" aria-labelledby="card-title-planner" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+          <a href="planner.html/" class="block p-6">
+            <h3 id="card-title-planner" class="text-xl font-semibold text-[#7C3AED]">Planlæg din tid</h3>
+            <p class="mt-2 text-gray-700 dark:text-gray-300">Skab overblik over din hverdag</p>
           </a>
         </article>
         <article role="region" aria-labelledby="card-title-worldbank" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
@@ -108,4 +108,5 @@
 
 </body>
 </html>
+
 
