Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </a>
         </article>
         <article role="region" aria-labelledby="card-title-planner" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
-          <a href="planner.html/" class="block p-6">
+          <a href="planner.html" class="block p-6">
             <h3 id="card-title-planner" class="text-xl font-semibold text-[#7C3AED]">Planlæg din tid</h3>
             <p class="mt-2 text-gray-700 dark:text-gray-300">Skab overblik over din hverdag</p>
           </a>
@@ -108,5 +108,6 @@
 
 </body>
 </html>
+
 
 
