Add 'Forsyningsbalancespillet' button to main section
Added a button for 'Forsyningsbalancespillet' with description.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Se videovejledninger og forklaringer</p>
           </a>
         </article>
+        <a href="forsyningsbalancespillet.html" class="btn btn-outline-primary btn-lg px-4 me-md-2 fw-bold" style="text-align: left; min-width: 250px;">
+  <div style="font-size: 1.25rem;">Forsyningsbalancespillet</div>
+  <div style="font-size: 0.8rem; font-weight: normal; opacity: 0.8;">
+    Træn opstilling, andele og tommelfingerregler
+  </div>
+</a>
       </div>
     </section>
   </main>
@@ -108,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
