--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             <p class="mt-2 text-gray-700 dark:text-gray-300">Se videovejledninger og forklaringer</p>
           </a>
         </article>
-        <a href="forsyningsbalancespillet.html" class="btn btn-outline-primary btn-lg px-4 me-md-2 fw-bold" style="text-align: left; min-width: 250px;">
-  <div style="font-size: 1.25rem;">Forsyningsbalancespillet</div>
-  <div style="font-size: 0.8rem; font-weight: normal; opacity: 0.8;">
-    Træn opstilling, andele og tommelfingerregler
-  </div>
-</a>
+     <article role="region" aria-labelledby="card-title-forsyningsbalance" class="bg-white dark:bg-gray-800 rounded-2xl shadow-md transition-transform transition-shadow hover:-translate-y-1 hover:shadow-xl">
+ <a href="forsyningsbalancespillet.html" class="block p-6">
+ <h3 id="card-title-forsyningsbalance" class="text-xl font-semibold text-[#7C3AED]">Forsyningsbalancespillet</h3>
+ <p class="mt-2 text-gray-700 dark:text-gray-300">Træn opstilling, andele og tommelfingerregler</p>
+ </a>
+</article>
       </div>
     </section>
   </main>
@@ -114,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
