Change greeting from 'Hello' to 'Goodbye'

--- a/forsyningsbalancespillet.html
+++ b/forsyningsbalancespillet.html
@@ -314,7 +314,7 @@
       <h2>Trin 3: Vækstbidrag (Analyse 2024)</h2>
       <p class="info-box">
         <strong>Opgave:</strong> Analyser tallene for <strong>2024</strong>. 
-        Vurder hver komponents bidrag til BNP-væksten. Husk: En komponent kan godt være positiv, selvom den ikke er en "driver" (stiger mere end BNP).
+        Vurder hver komponents bidrag til BNP-væksten. Husk: En komponent kan godt være positiv og skabe produktion, selvom den ikke  "bidrager" (stiger mere end BNP).
       </p>
 
       <div style="text-align:center; font-size:1.2em; margin-bottom:15px;">
@@ -336,9 +336,9 @@
       <div class="info-box" style="margin-top:20px; font-size:0.9em; line-height:1.6;">
         <strong>Kategorisering i analysen:</strong>
         <ul style="margin-top:5px; padding-left:20px;">
-          <li><strong>Driver:</strong> Komponenten stiger procentvis <em>mere</em> end BNP og trækker gennemsnittet op.</li>
+          <li><strong>Positivt:</strong> Komponenten stiger procentvis <em>mere</em> end BNP og trækker gennemsnittet op.</li>
           <li><strong>Neutralt:</strong> Komponenten stiger med <em>samme</em> takt som BNP.</li>
-          <li><strong>Positivt:</strong> Komponenten stiger (er over 0%), og bidrager derfor positivt til produktionen, men væksten er lavere end BNP-snittet.</li>
+          <li><strong>Mindre betydning:</strong> Komponenten stiger (er over 0%), og bidrager derfor positivt til produktionen, men væksten er lavere end BNP-snittet.</li>
           <li><strong>Negativt:</strong> Tallet er negativt (falder). Dette trækker BNP direkte ned.</li>
         </ul>
       </div>
@@ -358,7 +358,7 @@
       <ul style="display:inline-block; text-align:left;">
         <li>Forsyningsbalancens ligevægt</li>
         <li>Komponenternes vægtning i økonomien</li>
-        <li>Forskellen på drivere og positive/negative bidrag</li>
+        <li>Forskellen på Positivt, neutralt, negativt og mindre bidrag</li>
       </ul>
       <div style="margin-top:30px;">
         <button onclick="location.reload()">Start ny analyse</button>
@@ -716,4 +716,5 @@ function showVictory() {
 </script>
 
 </body>
+
 </html>
