Update print statement from 'Hello' to 'Goodbye'

--- a/forsyningsbalancespillet.html
+++ b/forsyningsbalancespillet.html
@@ -636,10 +636,10 @@ function setupStep3() {
     const comps = ["Privat forbrug", "Offentligt forbrug", "Investeringer", "Eksport"];
     
     const options = [
-      { label: "Driver", value: "Driver" },
+      { label: "Positivt", value: "Positivt" },
       { label: "Neutralt", value: "Neutralt" },
       { label: "Positivt", value: "Positivt" },
-      { label: "Negativt", value: "Negativt" }
+      { label: "Mindre bidrag", value: "Mindre bidrag" }
     ];
 
     comps.forEach(comp => {
@@ -718,3 +718,4 @@ function showVictory() {
 </body>
 
 </html>
+
