--- a/forsyningsbalancespillet.html
+++ b/forsyningsbalancespillet.html
@@ -638,7 +638,7 @@ function setupStep3() {
     const options = [
       { label: "Positivt", value: "Positivt" },
       { label: "Neutralt", value: "Neutralt" },
-      { label: "Positivt", value: "Positivt" },
+      { label: "Negativt", value: "Negativt" },
       { label: "Mindre bidrag", value: "Mindre bidrag" }
     ];
 
@@ -718,4 +718,5 @@ function showVictory() {
 </body>
 
 </html>
+
 
